Fix spacing

--- a/app/styles/content/_text.scss
+++ b/app/styles/content/_text.scss
@@ -3,7 +3,7 @@ p {
 }
 
 li {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 &-text {
@@ -82,6 +82,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 0.5em;
     font-size: 18px;
     color: #727272;
 
